--- a/battles/Battle-37-Height/245-Knot.html
+++ b/battles/Battle-37-Height/245-Knot.html
@@ -1,4 +1,6 @@
-<!-- descriptive -->
+<!-- idea 
+make a circle. then make the vertical and horizontal bars separately. use border-left to create the white space in the vertical bar. 
+-->
 
 <circle></circle>
 <vertical-bar></vertical-bar>
@@ -28,6 +30,8 @@
   }
 </style>
 
-<!-- minified -->
+<!-- minified version
 
 <c><v><h><style>*{position:fixed;}c{width:68;height:68;border:30px solid;border-radius: 50%;top:54;left:87;}h,v{height:130;width:30;background:#000;border-left:34px solid#FFF;top: 116;left:151;}h{height:30;width:64;top:149;left:215
+
+-->
